--- a/client-app/src/app/home/home.component.html
+++ b/client-app/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="main-container">
   <header class="header header-4">
-    ...
+    <h2 class="header-title">Gestión de Mantenimiento Equipos Médicos</h2>
   </header>
   <div class="content-container">
     <div class="content-area">
