--- a/client-app/src/app/home/contrato/edit-contrato/edit-contrato.component.html
+++ b/client-app/src/app/home/contrato/edit-contrato/edit-contrato.component.html
@@ -124,21 +124,19 @@
     <clr-dg-column class="table-header">Modelo</clr-dg-column>
     <clr-dg-column class="table-header">Nro. Serie</clr-dg-column>
     <clr-dg-column class="table-header">Nro. Patrimonial</clr-dg-column>
-    <clr-dg-column class="table-header">Ubicación</clr-dg-column>
+    <clr-dg-column class="table-header">Fecha compra</clr-dg-column>
     <clr-dg-column class="table-header">Estado del Equipo</clr-dg-column>
-    <clr-dg-column class="table-header">Estado del Contrato</clr-dg-column>
 
     <clr-dg-row *ngFor="let equipo of selectedEquipos"
                 (click)="onSelectEquipo(equipo)"
                 [class.selectEquipo]="equipo === selectedEquipo">
-      <clr-dg-cell class="table-column">{{equipo.tipoEquipo?.tipo}}</clr-dg-cell>
-      <clr-dg-cell class="table-column">{{equipo.marca?.marca}}</clr-dg-cell>
-      <clr-dg-cell class="table-column">{{equipo.modelo?.modelo}}</clr-dg-cell>
-      <clr-dg-cell class="table-column">{{equipo.numeroSerie}}</clr-dg-cell>
-      <clr-dg-cell class="table-column">{{equipo.numeroPatrimonial}}</clr-dg-cell>
-      <clr-dg-cell class="table-column">{{equipo.ubicacion?.bloque}},
-        {{equipo.ubicacion?.numeroSala}}, {{equipo.ubicacion?.nivel}}</clr-dg-cell>
-      <clr-dg-cell class="table-column">{{equipo.estado}}</clr-dg-cell>
+      <clr-dg-cell class="table-column text-left">{{equipo.tipoEquipo?.tipo}}</clr-dg-cell>
+      <clr-dg-cell class="table-column text-left">{{equipo.marca?.marca}}</clr-dg-cell>
+      <clr-dg-cell class="table-column text-left">{{equipo.modelo?.modelo}}</clr-dg-cell>
+      <clr-dg-cell class="table-column text-center">{{equipo.numeroSerie}}</clr-dg-cell>
+      <clr-dg-cell class="table-column text-center">{{equipo.numeroPatrimonial}}</clr-dg-cell>
+      <clr-dg-cell class="table-column text-center">{{equipo.fechaCompra}}</clr-dg-cell>
+      <clr-dg-cell class="table-column text-center">{{equipo.estado}}</clr-dg-cell>
     </clr-dg-row>
   </clr-datagrid>
 
