Corrección de errores en formularios

--- a/client-app/src/app/home/contrato/edit-contrato/edit-contrato.component.html
+++ b/client-app/src/app/home/contrato/edit-contrato/edit-contrato.component.html
@@ -24,7 +24,7 @@
     <div class="clr-col-6">
       <clr-input-container>
         <label>ID:</label>
-        <input clrInput type="text" [(ngModel)]="contratoId" name="contratoId" required/>
+        <input clrInput type="text" [(ngModel)]="contratoId" name="contratoId" disabled/>
         <clr-control-error>El campo es obligatorio</clr-control-error>
       </clr-input-container>
 
