--- a/client-app/src/app/home/mantenimiento/repuestos/add-repuesto/add-repuesto.component.html
+++ b/client-app/src/app/home/mantenimiento/repuestos/add-repuesto/add-repuesto.component.html
@@ -34,8 +34,8 @@
     <!--columna izquierda-->
     <div class="clr-col-6">
       <clr-input-container>
-        <label class="clr-col-5">Código:</label>
-        <input class="tamanho-total clr-col-8" clrInput id="codRepuesto"
+        <label class="clr-col-8">Código:</label>
+        <input class="tamanho-total clr-col-6" clrInput id="codRepuesto"
                name="codRepuesto" #codRep tabindex="1"
                (keyup.enter)="onEnterCodigoRepuesto(codRep.value)"
                (keyup)="onKeyCodigoRepuesto(codRep.value)"
@@ -45,20 +45,20 @@
       </clr-input-container>
 
       <clr-input-container>
-        <label class="clr-col-5">Precio:</label>
-        <input class="tamanho-total clr-col-8" clrInput type="text" [(ngModel)]="precio"
-               name="precio" [disabled]="readonlyField"/>
+        <label class="clr-col-8">Precio:</label>
+        <input class="tamanho-total clr-col-6" clrInput type="text" [(ngModel)]="precio"
+               name="precio" [disabled]="readonlyField" tabindex="2"/>
       </clr-input-container>
 
       <clr-input-container>
-        <label class="clr-col-5">Cant. Adquirida:</label>
-        <input class="tamanho-total clr-col-8" clrInput type="text"
+        <label class="clr-col-8">Cant. Adquirida:</label>
+        <input class="tamanho-total clr-col-6" clrInput type="text" tabindex="3"
                [(ngModel)]="cantAdquirida" name="cantAdquirida" [disabled]="readonlyField"/>
       </clr-input-container>
 
       <clr-select-container>
         <label class="clr-col-5">Tipo</label>
-        <select clrSelect name="tipoId" [(ngModel)]="tipoId"
+        <select clrSelect name="tipoEqId" [(ngModel)]="tipoEqId" tabindex="4"
                 (ngModelChange)="onSelectTipoEquipo()" [disabled]="readonlyField">
           <option disabled>Seleccionar Tipo</option>
           <option *ngFor="let tipo of tipos"
@@ -70,7 +70,7 @@
       <clr-select-container>
         <label class="clr-col-5">Representante:</label>
         <select clrSelect name="repreId" [(ngModel)]="repreId" [disabled]="readonlyField"
-                (ngModelChange)="onSelectRepresentante()">
+                (ngModelChange)="onSelectRepresentante()" tabindex="5">
           <option disabled>Seleccionar Representante</option>
           <option *ngFor="let repre of representantes"
                   value={{repre.id}}>{{repre.nombre}}
@@ -84,21 +84,21 @@
       <clr-textarea-container>
         <label class="clr-col-5">Descripción:</label>
         <textarea class="tamanho-total" clrTextarea [(ngModel)]="descripcion"
-                  name="description" required [disabled]="readonlyField">
+                  name="description" required [disabled]="readonlyField" tabindex="6">
             </textarea>
         <clr-control-error>El campo es obligatorio</clr-control-error>
       </clr-textarea-container>
 
       <clr-input-container>
-        <label class="clr-col-5">Cant. Existente:</label>
-        <input class="tamanho-total clr-col-8" clrInput type="text"
+        <label class="clr-col-8">Cant. Existente:</label>
+        <input class="tamanho-total clr-col-6" clrInput type="text" tabindex="7"
                [(ngModel)]="cantExistente" name="cantExistente" [disabled]="readonlyField"/>
       </clr-input-container>
 
       <clr-select-container>
         <label class="clr-col-5">Seleccione Marca</label>
         <select clrSelect name="marcaId" [(ngModel)]="marcaId" [disabled]="readonlyField"
-                (ngModelChange)="onSelectMarca()">
+                (ngModelChange)="onSelectMarca()" tabindex="8">
           <option>Seleccionar Marca</option>
           <option *ngFor="let marca of marcas"
                   value={{marca.id}}>{{marca.marca}}
@@ -109,8 +109,7 @@
       <clr-select-container>
         <label class="clr-col-5">Modelo:</label>
         <select clrSelect name="tipoId" [(ngModel)]="modeloId" [disabled]="readonlyField"
-                (ngModelChange)="onSelectModelo()">
-          <option disabled>Seleccionar Representante</option>
+                (ngModelChange)="onSelectModelo()" tabindex="9">
           <option disabled>Seleccionar Modelo</option>
           <option *ngFor="let modelo of modelos"
                   value={{modelo.id}}>{{modelo.modelo}}
